--- a/number-baseball/index.html
+++ b/number-baseball/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Number Baseball</title>
+  <title>숫자야구</title>
 </head>
 
 <body>
@@ -13,9 +13,7 @@
     <input type="text" id="input">
     <button>확인</button>
   </form>
-
   <div id="logs"></div>
-
   <script src="index.js"></script>
 </body>
 
