--- a/lotto/index.html
+++ b/lotto/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lotto</title>
+  <title>로또추첨기</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
