--- a/rock-scissors-paper/index.html
+++ b/rock-scissors-paper/index.html
@@ -12,9 +12,9 @@
 <body>
   <div id="computer"></div>
   <div>
-    <button id="scissors">가위</button>
-    <button id="rock">바위</button>
-    <button id="paper">보</button>
+    <button id="scissors" class="btn">가위</button>
+    <button id="rock" class="btn">바위</button>
+    <button id="paper" class="btn">보</button>
   </div>
   <div id="score">0</div>
   <script src="index.js"></script>
