--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -10,6 +10,24 @@
 </head>
 
 <body>
+  <!-- <table>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table> -->
+
   <script src="./index.js"></script>
 </body>
 
